Deleting unused imports and making changes